###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
This MODULE.bazel file defines the external dependencies and module configuration
for the go_present project using Bazel's Bzlmod system.
"""

module(
    name = "go_present",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "gazelle", version = "0.36.0")

# Removed invalid references to @rules_go to fix repository mapping issues.

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, with a specific version.
go_sdk.download(version = "1.23.1")

# Another alternative is to register the Go SDK installed on the host (see the nota bene below).
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_golang_protobuf",
    "org_golang_google_protobuf",
)

