###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
This MODULE.bazel file defines the external dependencies and module configuration
for the go_present project using Bazel's Bzlmod system.
"""

module(
    name = "go_present",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Removed invalid references to @rules_go to fix repository mapping issues.

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, with a specific version.
go_sdk.download(version = "1.23.1")

# Another alternative is to register the Go SDK installed on the host (see the nota bene below).
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "com_github_ansrivas_fiberprometheus_v2",
    "com_github_caarlos0_env_v11",
    "com_github_conight_go_googletrans",
    "com_github_gin_gonic_gin",
    "com_github_go_playground_validator_v10",
    "com_github_goccy_go_json",
    "com_github_gofiber_fiber_v2",
    "com_github_gofiber_swagger",
    "com_github_golang_migrate_migrate_v4",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_masterminds_squirrel",
    "com_github_rabbitmq_amqp091_go",
    "com_github_rs_zerolog",
    "com_github_stretchr_testify",
    "com_github_swaggo_swag",
    "org_golang_google_protobuf",
    "org_uber_go_mock",
)
