load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "guru-example_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/guru-example",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "guru-example",
    embed = [":guru-example_lib"],
    visibility = ["//visibility:public"],
)
