load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "json-bool-or-string_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/json-bool-or-string",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "json-bool-or-string",
    embed = [":json-bool-or-string_lib"],
    visibility = ["//visibility:public"],
)
