load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "method-pointer-value_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/method-pointer-value",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "method-pointer-value",
    embed = [":method-pointer-value_lib"],
    visibility = ["//visibility:public"],
)
