load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mutexprofileweb_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/mutexprofileweb",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mutexprofileweb",
    embed = [":mutexprofileweb_lib"],
    visibility = ["//visibility:public"],
)
