load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "protobuf_lib",
    srcs = [
        "add_person.go",
        "list_people.go",
    ],
    importpath = "github.com/Hyvi/go-present/protobuf",
    visibility = ["//visibility:private"],
    deps = [
        ":out_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "protobuf",
    embed = [":protobuf_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protobuf_test",
    srcs = ["list_people_test.go"],
    embed = [":protobuf_lib"],
    deps = [":out_go_proto"],
)

proto_library(
    name = "out_proto",
    srcs = ["addressbook.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "out_go_proto",
    importpath = "github.com/Hyvi/go-present/protobuf/out",
    proto = ":out_proto",
    visibility = ["//visibility:public"],
)
