load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "slice-gc_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/slice-gc",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "slice-gc",
    embed = [":slice-gc_lib"],
    visibility = ["//visibility:public"],
)
