load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ticker_lib",
    srcs = ["nanoticker.go"],
    importpath = "github.com/Hyvi/go-present/ticker",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ticker",
    embed = [":ticker_lib"],
    visibility = ["//visibility:public"],
)
