load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "v3-timeout_lib",
    srcs = ["go-http-v3-timeout.go"],
    importpath = "github.com/Hyvi/go-present/v3-timeout",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "v3-timeout",
    embed = [":v3-timeout_lib"],
    visibility = ["//visibility:public"],
)
