load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bitwise-shift-operator-string_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hyvi/go-present/bitwise-shift-operator-string",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bitwise-shift-operator-string",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)
