load("@protobuf//bazel:proto_library.bzl", "proto_library")

# gazelle:resolve proto github.com/Hyvi/go-present/protobuf/out //hello/protobuf:out_go_proto
# gazelle:resolve go github.com/Hyvi/go-present/protobuf/out //hello/protobuf:out_go_proto
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_go//proto:def.bzl", "go_proto_library")


go_library(
    name = "protobuf_lib",
    srcs = [
        "add_person.go",
        "list_people.go",
    ],
    importpath = "github.com/Hyvi/go-present/protobuf",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_google_protobuf//proto",
        ":out_go_proto",  # 添加对生成的 protobuf 代码的依赖
    ],
)

go_binary(
    name = "protobuf",
    embed = [":protobuf_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protobuf_test",
    srcs = ["list_people_test.go"],
    embed = [":protobuf_lib"],
)

proto_library(
    name = "out_proto",
    srcs = ["addressbook.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",  # 添加 timestamp.proto 依赖
    ],
)

go_proto_library(
    name = "out_go_proto",
    importpath = "github.com/Hyvi/go-present/protobuf/out",
    proto = ":out_proto",
    visibility = ["//visibility:public"],
      deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
