load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "v1_http_s",
    embed = [":go-present_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go-present_lib",
    srcs = ["go-http-v1.go"],
    importpath = "github.com/Hyvi/go-present/v1",
    visibility = ["//visibility:private"],
    deps = ["//hello/byte-2-string"],
)
